<resources>
    <string name="app_name">Effective Mobile Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
</resources>