<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sign_up_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="113dp"
            android:layout_marginTop="140dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_up"
            android:textColor="#161826"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="60dp"
            android:autofillHints="First name"
            android:background="@drawable/ic_edit_text"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_tv" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Second name"
            android:background="@drawable/ic_edit_text"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first_name" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Email"
            android:background="@drawable/ic_edit_text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!1234567890.@#$%^*?"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:autofillHints="Password"
            android:background="@drawable/ic_edit_text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!.@#$%^*?"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/log_in" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4E55D7"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="@id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <TextView
            android:id="@+id/already_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/already_have_an_account"
            android:textColor="#808080"
            app:layout_constraintStart_toStartOf="@id/sign_up_btn"
            app:layout_constraintTop_toBottomOf="@id/sign_up_btn" />

        <TextView
            android:id="@+id/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/log_in"
            android:textColor="#254FE6"
            app:layout_constraintStart_toEndOf="@id/already_have_acc"
            app:layout_constraintTop_toBottomOf="@id/sign_up_btn" />

        <TextView
            android:id="@+id/google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:drawablePadding="10dp"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_google"
            app:layout_constraintBottom_toTopOf="@id/apple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/already_have_acc" />

        <TextView
            android:id="@+id/apple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="10dp"
            android:text="@string/sign_in_with_apple"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_apple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/google" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>