<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInPage">

    <TextView
        android:id="@+id/sign_in_tv"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="113dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_in"
        android:textColor="#161826"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_tv"
        app:placeholderText="First name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_et"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:imeOptions="actionNext"
            android:padding="5dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        app:placeholderText="Last name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_et"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:imeOptions="actionNext"
            android:padding="5dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name"
        app:placeholderText="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!.@#$%^*?"
            android:imeOptions="actionNext"
            android:padding="5dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4E55D7"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/already_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/already_have_an_account"
        android:textColor="#808080"
        app:layout_constraintStart_toStartOf="@id/sign_in_btn"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/log_in"
        android:textColor="#254FE6"
        app:layout_constraintStart_toEndOf="@id/already_have_acc"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />

    <TextView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sign_in_with_google"
        app:layout_constraintTop_toBottomOf="@id/already_have_acc"
        app:drawableStartCompat="@drawable/ic_google" />

    <TextView
        android:id="@+id/apple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/sign_in_with_apple"
        app:layout_constraintTop_toBottomOf="@id/google"
        app:drawableStartCompat="@drawable/ic_apple" />

</androidx.constraintlayout.widget.ConstraintLayout>